# simple-file-mirror

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: py-publish.yml
_test/: _mockups.py  datasync.py
_test_alone/: _setup.py  run_test.py
simplefilemirror/: __init__.py  __version__.py  _get_dir.py  _glob.py  _winapi.py  handler.py
simplefilemirror.egg-info/: PKG-INFO  SOURCES.txt
